# DustEng

./: .gitignore  CMakeLists.txt  conanfile.txt  generate_project_files.bat
.github/workflows/: Clang-format-checker.yml  linux-build.yml  windows-build.yml  windows-test-runner.yml
Automation/: automation.py
Automation/CMAKE/: CMakeHelpers.cmake
Engine/: CMakeLists.txt  EngineConfig.h.template
Engine/Source/: main.cpp  pch.h
Engine/Source/Core/: Engine.cpp  Engine.h  Utility.h
Engine/Source/Log/: Log.cpp  Log.h
Engine/Source/Window/: IWindow.h  IWindowManager.h
Engine/Source/Window/GLFW/: GLFWWindow.cpp  GLFWWindow.h  GLFWWindowManager.cpp  GLFWWindowManager.h
Engine/Tests/: LogConceptTests.cpp  LogConceptsTests.cpp  WindowTests.cpp
